--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="Пицца в Мурино">
 <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
-<link rel="shortcut icon" href="logojune2022.png"/>
+<link rel="shortcut icon" href="logojune2022.PNG"/>
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
