--- a/foodlist.html
+++ b/foodlist.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Oliver - Меню</title>
-        <link rel="shortcut icon" href="logojune2022.png"/>
+        <link rel="shortcut icon" href="logojune2022.PNG"/>
             <link rel="stylesheet" href="genstyle.css">
             <style>
             @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
