--- a/foodlist.html
+++ b/foodlist.html
@@ -31,7 +31,7 @@
     <thead>
       <tr>
         <th></th>
-<th><a href="index.html"><img src="logojune2022.png"height="70px"</a></th>
+<th><a href="index.html"><img src="logojune2022.PNG"height="70px"</a></th>
 <th></th>
         <th id="logotext"> Oliver</th>
       </tr>
