--- a/rejoicing.html
+++ b/rejoicing.html
@@ -6,7 +6,7 @@
     <title>Oliver - Банкеты</title>
     <link rel="stylesheet" href="genstyle.css">
         <meta name="keywords" content="Банкеты Мурино">
-        <link rel="shortcut icon" href="logojune2022.png"/>
+        <link rel="shortcut icon" href="logojune2022.PNG"/>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
 </style>
@@ -32,7 +32,7 @@ document.body.classList.remove('loaded_hiding');
       <thead>
         <tr>
           <th></th>
-<th><a href="index.html"><img src="logojune2022.png"height="70px"</a></th>
+<th><a href="index.html"><img src="logojune2022.PNG"height="70px"</a></th>
 <th></th>
           <th id="logotext"> Oliver</th>
         </tr>
