--- a/waylist.html
+++ b/waylist.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Oliver - Маршруты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Маршруты в Оливер Пицца поблизости">
     <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
+            <link rel="shortcut icon" href="logojune2022.PNG"/>
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
 </style>
@@ -32,7 +33,7 @@ window.setTimeout(function () {
       <thead>
         <tr>
           <th></th>
-<th><a href="index.html"><img src="logojune2022.png"height="70px"</a></th>
+<th><a href="index.html"><img src="logojune2022.PNG"height="70px"</a></th>
 <th></th>
           <th id="logotext"> Oliver</th>
         </tr>
