--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   onclick="myFunctions()">Подробности акции
   <span class="getter1" id="colPie">Совершая заказ в 17:41 посетитель получает 100% скидку на одну пиццу. Акция дейсвтует только в среду и четверг.</span>
 </div><br>
-<img src="genban3.png" class="genban"><br>
+<img src="genban3.PNG" class="genban"><br>
 <div class="honey"
     onclick="myFunctionses()">Подробности акции
     <span class="cap" id="goal">Чтобы участвовать в акции нужно собрать десять чеков о покупке пицц в течении месяца. Скидка 50% не относится ко всей сумме, а распространяется только на пиццу.</span>
