--- a/foodlist.html
+++ b/foodlist.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Oliver - Меню</title>
-        <link rel="shortcut icon" href="logojune2022.png"/>
+        <link rel="shortcut icon" href="logojune2022.PNG"/>
             <link rel="stylesheet" href="genstyle.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
     <thead>
       <tr>
         <th></th>
-<th><a href="index.html"><img src="logojune2022.png"height="70px"</a></th>
+<th><a href="index.html"><img src="logojune2022.PNG"height="70px"</a></th>
 <th></th>
         <th id="logotext"> Оливер</th>
       </tr>
