--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="Пицца в Мурино">
 <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
-<link rel="shortcut icon" href="logojune2022.png"/>
+<link rel="shortcut icon" href="logojune2022.PNG"/>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
           <thead>
             <tr>
               <th></th>
-  <th><a href="index.html"><img src="logojune2022.png"height="70px"</a></th>
+  <th><a href="index.html"><img src="logojune2022.PNG"height="70px"</a></th>
   <th></th>
               <th id="logotext"> Оливер</th>
             </tr>
