--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 <img src="genban2.png" class="genban"><br>
 <div class="wind"
     onclick="myFunction()">Подробности акции
-    <span class="uptext1" id="piPie">Совершая заказ в 17:41 посетитель получает 100% скидку на одну пиццу. Акция дейсвтует только в среду.</span>
+    <span class="uptext1" id="piPie">Совершив заказ в 17:41, посетитель получает возможность заказать пиццу бесплатно. Акция действует в среду в 17:41.</span>
   </div><br>
 <img src="genban1.png" class="genban"><br>
   <div class="razer"
   onclick="myFunctions()">Подробности акции
-  <span class="getter1" id="colPie">Для участья в акции необходимо предъявить: паспорт, или иные документы.</span>
+  <span class="getter1" id="colPie">Для участия в акции необходимо предъявить паспорт. Акция проводится в: понедельник, четверг и субботу, с 14:00 по 16:00.</span>
 </div><br>
 
 
