--- a/testfile.html
+++ b/testfile.html
@@ -63,8 +63,8 @@
       </nav>
       <div class="hidden-overley"></div>
 
-      <p id="test">последняя v 3.4.02
-      Шрифтирование, переработка стрыктуры подвала</p>
+      <p id="test">последняя v 3.4.01
+      Исправление ошибок</p>
 
 </body>
 </html>
