--- a/rejoicing.html
+++ b/rejoicing.html
@@ -63,8 +63,8 @@ document.body.classList.remove('loaded_hiding');
         <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Информация</a>
       </div>
     </nav>
-    <div class="hidden-overley"></div>
-<div class="spinner"></div>
+    <div class="hidden-overley"></div><br>
+<div class="spinner"></div><br>
 <p id="subfeasttext">Раздел станет доступным когда состоится открытие</p>
 
       <br>
