--- a/testfile.html
+++ b/testfile.html
@@ -63,8 +63,12 @@
       </nav>
       <div class="hidden-overley"></div>
 
-      <p id="test">последняя v 3.4.02
-      Шрифтирование, переработка стрыктуры подвала</p>
+      <p id="test">
+        последняя v 3.4.02 Шрифтирование, переработка стрыктуры подвала
+        <br><br>последняя vers. 5-A.0
+        <br>Структурирование подвала<br>Замена старых баннеров<br>Добавление допстраницы в меню еду
+        <br>Добавление переключателя в меню<br>Добавление логотипа в общее меню<br>Подключение текста подвала к файлу JS<br>
+        Отпимизация логотипа в в шапке<br>Замена рекламных текстов<br>Оптимизация и реорганизация работы прелоадера</p>
 
 </body>
 </html>
