--- a/docs.html
+++ b/docs.html
@@ -47,7 +47,7 @@
         </div>
         <div class="menu-main-menu-container">
           <a id="submenutext" href="index.html" style="text-decoration: none"><br>На главную</a><br>
-          <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Меню</a><br>
+          <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
           <a id="submenutext" href="waylist.html" style="text-decoration: none"><br>Маршруты</a><br>
           <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Торжества</a>
         </div>
