--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="menu-main-menu-container">
-        <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Меню</a><br>
+        <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
         <a id="submenutext" href="waylist.html" style="text-decoration: none"><br>Маршруты</a><br>
         <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Торжества</a><br>
         <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Информация</a>
