--- a/rejoicing.html
+++ b/rejoicing.html
@@ -50,7 +50,7 @@ document.body.classList.remove('loaded_hiding');
       </div>
       <div class="menu-main-menu-container">
         <a id="submenutext" href="index.html" style="text-decoration: none"><br>На главную</a><br>
-        <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Меню</a><br>
+        <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
         <a id="submenutext" href="waylist.html" style="text-decoration: none"><br>Маршруты</a><br>
         <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Информация</a>
       </div>
