--- a/waylist.html
+++ b/waylist.html
@@ -24,7 +24,7 @@
 </div>
 <section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
           <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a>
-      <div id="nav-icon3" class="pushmenu">
+      <br><br><div id="nav-icon3" class="pushmenu">
         <span></span>
         <span></span>
         <span></span>
@@ -43,8 +43,8 @@
         <div class="menu-main-menu-container">
           <a id="submenutext" href="index.html" style="text-decoration: none"><br>На главную</a><br>
           <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
-          <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Торжества</a><br>
-          <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Информация</a>
+          <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
+          <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
         </div>
       </nav>
       <div class="hidden-overley"></div>
