--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <meta name="keywords" content="Пицца в Мурино">
   </head>
   <body style="text-align: center">
+      <div class="preloader">
+<svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+  <path fill="currentColor"
+    d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
+  </path>
+</svg>
+</div>
 <section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
     <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a>
     <br><br><div id="nav-icon3" class="pushmenu">
