--- a/badpage.html
+++ b/badpage.html
@@ -13,21 +13,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,900;1,100;1,300&display=swap" rel="stylesheet">
-<script>
-window.onload = function () {
-document.body.classList.add('loaded_hiding');
-window.setTimeout(function () {
-document.body.classList.add('loaded');
-document.body.classList.remove('loaded_hiding');
-}, 500);
-}
-</script>
   </head>
   <body style="text-align: center">
-    <div class="preloader">
-  <svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
-  </svg>
+  <div class="preloader">
+<svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+  <path fill="currentColor"
+    d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
+  </path>
+</svg>
 </div>
 <section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
 <a href="https://hi-oliver.github.io/ru/"><img src="lg_1ua.png" width="90"></a><img src="lg_2ua.png" width="110">
