--- a/another.html
+++ b/another.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Пицца в Мурино">
     <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
-<link rel="icon" type="image/x-icon" href="logojune2022.png" /><link rel="apple-touch-icon" sizes="180x180" href="logojune2022.png"><link rel="icon" sizes="192x192" href="logojune2022.png">
+<link rel="icon" type="image/x-icon" href="fav.png" /><link rel="apple-touch-icon" sizes="180x180" href="fav.png"><link rel="icon" sizes="192x192" href="fav.png">
         <link rel="stylesheet" href="genstyle.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
