--- a/badpage.html
+++ b/badpage.html
@@ -6,7 +6,7 @@
     <title>Оливер</title>
     <link rel="stylesheet" href="genstyle.css">
         <meta name="keywords" content="Банкеты Мурино">
-        <link rel="shortcut icon" href="logojune2022.png"/>
+        <link rel="shortcut icon" href="fav.png"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
