--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Пицца в Мурино">
     <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
-    <link rel="icon" href="logojune2022.png" type="image/x-icon">
+    <link rel="icon" href="fav.png" type="image/x-icon">
     <link rel="stylesheet" href="genstyle.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
