--- a/waylist.html
+++ b/waylist.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Расположение и контакты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="fav.png" /><link rel="apple-touch-icon" sizes="180x180" href="fav.png"><link rel="icon" sizes="192x192" href="fav.png">
     <meta name="keywords" content="Маршруты в Оливер Пицца поблизости">
     <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
     <link rel="preconnect" href="https://fonts.googleapis.com">
