--- a/docs.html
+++ b/docs.html
@@ -27,7 +27,7 @@
   </div>
       <section id="way_one">
 <section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a><img src="biglogo.png"height="50px"></section>
-    <img src="lg_1ru.png" width="105"><a href="#" onclick="history.back();return false;"><img src="lg_2ru.png" width="102.5"></a>
+    <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a>
       <div id="nav-icon3" class="pushmenu">
         <span></span>
         <span></span>
