--- a/badpage.html
+++ b/badpage.html
@@ -23,7 +23,7 @@
 </svg>
 </div>
 <section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
-<a href="https://hi-oliver.github.io/ru/"><img src="lg_1ua.png" width="90"></a><img src="lg_2ua.png" width="110">
+<a href="#" onclick="history.back();return false;"><img src="lg_1ua.png" width="90"></a><img src="lg_2ua.png" width="110">
     <div id="nav-icon3" class="pushmenu">
       <span></span>
       <span></span>
