--- a/index.html
+++ b/index.html
@@ -18,39 +18,39 @@
         <meta name="keywords" content="Пицца в Мурино">
   </head>
   <body style="text-align: center">
-      <div class="preloader">
-<svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-  <path fill="currentColor"
-    d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
-  </path>
-</svg>
-</div>
-<section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
-    <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a>
-    <br><br><div id="nav-icon3" class="pushmenu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+    <div class="preloader">
+  <svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+    <path fill="currentColor"
+      d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
+    </path>
+  </svg>
+  </div>
+<table class="GeneralBan"><td class="GeneralBanLogo"><a href="index.html"><img src="logojune2022.png"height="35px"></a></td><td class="GeneralBanMe">&nbsp;<div id="nav-icon3" class="pushmenu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div></td>
+</table>
+
+    <br><br>
         <nav class="sidebar">
           <div class="text d-flex p-2">
-            <a><img src="whitelogo.png" width="50"></a>
             <div id="nav-icon3" class="pushmenu opened">
-              <span></span>
               <span></span>
               <span></span>
               <span></span>
             </div>
           </div>
           <div class="menu-main-menu-container">
-            <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
-            <a id="submenutext" href="waylist.html" style="text-decoration: none"><br>Расположение и контакты</a><br>
-            <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
-            <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
+            <a class="SelectedMenuLinksStyle" style="text-decoration: none"><br>Главная страница</a><br>
+            <a class="MenuLinksStyle" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
+            <a class="MenuLinksStyle" href="waylist.html" style="text-decoration: none"><br>Расположение и контакты</a><br>
+            <a class="MenuLinksStyle" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
+            <a class="MenuLinksStyle" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
           </div>
         </nav>
         <div class="hidden-overley"></div><br>
-
+  <div class="LanguagesSelect"> <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a></div>
     <br><a class="GenIndexText">Подарки в удобное время.</a>
     <br><a class="UnderIndexBlackText">Совершайте покупки в 17:41 и получайте пиццу в подарок. <br><a class="UnderIndexWhiteTextLink" href="foodlist.html" >Перейти на кухню</a>.</a>
     <br><img src="time.png" width="200px">
@@ -59,6 +59,9 @@
     <br><a class="UnderIndexWhiteText">Дарим аппетитные подарки в ваш день рождения.<br><a class="UnderIndexWhiteTextLink" href="foodlist.html" >Перейти на кухню</a><a class="UnderIndexWhiteText">.</a>
     <br><img src="cake.png" width="200px">
 </div>
+<br><a class="GenIndexText">Забронируйте столик.</a>
+<br><a class="UnderIndexBlackText">Сделать заказ и забронировать столик можно <a class="UnderIndexWhiteTextLink" href="waylist.html" >на этой странице</a>.</a>
+<br><br><img src="booking.png" width="200px"><br><br>
 <div class="asylum">
 <br><img src="logojune2022.png" width="50" class="footlogo"><img src="biglogo.png" width="50" class="footlogo">
 <br><br><a class="CellarText">© ООО "Альба", 2019 - 2022 г. <br>Все права защищены.</a>
