--- a/badpage.html
+++ b/badpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Организация мероприятий</title>
+    <title>Оливер</title>
     <link rel="stylesheet" href="genstyle.css">
         <meta name="keywords" content="Банкеты Мурино">
         <link rel="shortcut icon" href="fav.png"/>
@@ -13,15 +13,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,900;1,100;1,300&display=swap" rel="stylesheet">
-<script>
-window.onload = function () {
-document.body.classList.add('loaded_hiding');
-window.setTimeout(function () {
-document.body.classList.add('loaded');
-document.body.classList.remove('loaded_hiding');
-}, 500);
-}
-</script>
   </head>
   <body style="text-align: center">
     <div class="preloader">
@@ -31,7 +22,7 @@ document.body.classList.remove('loaded_hiding');
     </path>
   </svg>
   </div>
-  <table class="GeneralBan"><td class="GeneralBanLogo"><a href="index.html"><img src="logojune2022.png"height="35px"></a></td><td class="GeneralBanMe">&nbsp;<div id="nav-icon3" class="pushmenu">
+  </div><table class="GeneralBan"><td class="GeneralBanLogo"><a href="index.html"><img src="logojune2022.png"height="35px"></a></td><td class="GeneralBanMe">&nbsp;<div id="nav-icon3" class="pushmenu">
         <span></span>
         <span></span>
         <span></span>
@@ -48,31 +39,32 @@ document.body.classList.remove('loaded_hiding');
               </div>
             </div>
             <div class="menu-main-menu-container">
-              <a class="MenuLinksStyle" href="index.html" style="text-decoration: none"><br>Главная страница</a><br>
+              <a class="MenuLinksStyle"  href="index.html" style="text-decoration: none"><br>Главная страница</a><br>
               <a class="MenuLinksStyle" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
               <a class="MenuLinksStyle" href="waylist.html" style="text-decoration: none"><br>Расположение и контакты</a><br>
-              <a class="SelectedMenuLinksStyle" style="text-decoration: none"><br>Организация мероприятий</a><br>
+              <a class="MenuLinksStyle" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
               <a class="MenuLinksStyle" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
             </div>
           </nav>
           <div class="hidden-overley"></div><br>
-    <div class="LanguagesSelect"> <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a></div>
-            <h1 class="GenIndexText">Организация мероприятий.</h1>
+    <div class="LanguagesSelect"><a href="#" onclick="history.back();return false;"><img src="lg_1ua.png" width="90"></a><img src="lg_2ua.png" width="110"></div>
+            <h1 class="GenIndexText">Приносимо вибачення.</h1>
 <div class="spinner"><p id="subfeasttextLite"><br>Oops!</p></div><br>
-<p id="subfeasttext">Этот раздел пока недоступен. Приносим свои извинения.</p>
-<div class="asylum"><br><p id="infoVac" style="color: black; text-align: right;">Сделайте заказ по телефону. Закажите столик.</p>
-      <p id="OccDeal">ОЛИВЕР #1 Мурино, <a class="BlueLink" href="">позвонить</a>.</p>
-      <p id="OccDeal">ОЛИВЕР #2 Санкт-Петербург, <a class="BlueLink" href="">позвонить</a>.</p>
-      <p id="infoVac" style="color: black; text-align: right;">Работаем для вас.</p>
-      <p id="OccDeal">С 11:00 до 23:00 без выходных.</p><br></div>
+<p id="subfeasttext">Українська версія знаходиться в стадії оновлення, будь ласка, скористайтеся російською версією сайту.</p>
+<div class="asylum"><br><p id="infoVac" style="color: black; text-align: right;">Зробіть замовлення по телефону. Замовити столик.</p>
+      <p id="OccDeal">ОЛІВЕР #1 Муріно, <a class="BlueLink" href="">потелефонувати</a>.</p>
+      <p id="OccDeal">ОЛІВЕР #2 Санкт-Петербург, <a class="BlueLink" href="">потелефонувати</a>.</p>
+      <p id="infoVac" style="color: black; text-align: right;">Працюємо для вас.</p>
+      <p id="OccDeal">З 11:00 до 23:00 без вихідних.</p><br></div>
 
       <div class="asylum">
       <br><img src="logojune2022.png" width="50" class="footlogo"><img src="biglogo.png" width="50" class="footlogo">
-      <br><br><a class="CellarText">© ООО "Альба", 2019 - 2022 г. <br>Все права защищены.</a>
-      <br><br><a id="cellarlink" href="index.html">Главная страница</a><a id="cellarCut"> | </a>
+      <br><br><a class="CellarText">© ООО "Альба", 2019 - 2022 г. <br>Всі права захищені.</a>
+      <br><br><a id="cellarlink" href="index.html">Головна сторінка</a><a id="cellarCut"> | </a>
       <a id="cellarlink" href="foodlist.html">Кухня</a><a id="cellarCut"> | </a>
-      <a id="cellarlink" href="waylist.html">Расположение и контакты</a><a id="cellarCut"> | </a>
-      <a id="cellarlink" href="docs.html">Юридическая информация и работа с Оливер</a>
+      <a id="cellarlink" href="rejoicing.html">Організація заходів</a><a id="cellarCut"> | </a>
+      <a id="cellarlink" href="waylist.html">Розташування та контакти</a><a id="cellarCut"> | </a>
+      <a id="cellarlink" href="docs.html">Юридична інформація та робота з Олівер</a>
       </div>
    <script src="harbour.js"></script>
   </body>
