--- a/foodlist.html
+++ b/foodlist.html
@@ -14,39 +14,40 @@
             <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,900;1,100;1,300&display=swap" rel="stylesheet">
   </head>
 <body style="text-align: center">
+  <script src="harbour.js"></script>
   <div class="preloader">
 <svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
   <path fill="currentColor"
     d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
   </path>
 </svg>
-</div>
-<section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
-    <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a><br>
-    <a href="another.html"><img src="sldp.png" width="300"></a><br><br>
-    <div id="nav-icon3" class="pushmenu">
+</div><table class="GeneralBan"><td class="GeneralBanLogo"><a href="index.html"><img src="logojune2022.png"height="35px"></a></td><td class="GeneralBanMe">&nbsp;<div id="nav-icon3" class="pushmenu">
       <span></span>
       <span></span>
       <span></span>
-    </div>
-    <nav class="sidebar">
-      <div class="text d-flex p-2">
-        <a><img src="whitelogo.png" width="50"></a>
-        <div id="nav-icon3" class="pushmenu opened">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-      <div class="menu-main-menu-container">
-        <a id="submenutext" href="index.html" style="text-decoration: none"><br>На главную</a><br>
-        <a id="submenutext" href="waylist.html" style="text-decoration: none"><br>Расположение и контакты</a><br>
-        <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
-        <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
-      </div>
-    </nav>
-    <div class="hidden-overley"></div>
+    </div></td>
+</table>
+
+    <br><br>
+        <nav class="sidebar">
+          <div class="text d-flex p-2">
+            <div id="nav-icon3" class="pushmenu opened">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+          <div class="menu-main-menu-container">
+            <a class="MenuLinksStyle"  href="index.html" style="text-decoration: none"><br>Главная страница</a><br>
+            <a class="MenuLinksStyle" href="another.html" style="text-decoration: none"><br>Салаты, снеки и напитки</a><br>
+            <a class="MenuLinksStyle" href="waylist.html" style="text-decoration: none"><br>Расположение и контакты</a><br>
+            <a class="MenuLinksStyle" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
+            <a class="MenuLinksStyle" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
+          </div>
+        </nav>
+        <div class="hidden-overley"></div><br>
+  <div class="LanguagesSelect"> <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a></div>
+      <a href="another.html"><img src="sldp.png" width="300"></a><br><br>
     <br><div class="IndexBlock1">
     <br><a class="GenIndexWhiteText">Перед заказом.</a>
     <br><a class="UnderIndexWhiteText">Все цены указаны за пиццу в диаметре 25 см.</a>
@@ -187,6 +188,9 @@
 </tr>
 </table>
 </section>
+<br><a class="GenIndexText">Забронируйте столик.</a>
+<br><a class="UnderIndexBlackText">Сделать заказ и забронировать столик можно <a class="UnderIndexWhiteTextLink" href="waylist.html" >на этой странице</a>.</a>
+<br><br><img src="booking.png" width="200px"><br><br>
 <br>
 <div class="asylum">
 <br><img src="logojune2022.png" width="50" class="footlogo"><img src="biglogo.png" width="50" class="footlogo">
@@ -197,6 +201,5 @@
 <a id="cellarlink" href="waylist.html">Расположение и контакты</a><a id="cellarCut"> | </a>
 <a id="cellarlink" href="docs.html">Юридическая информация и работа с Оливер</a>
 </div>
-<script src="harbour.js"></script>
   </body>
 </html>
