--- a/waylist.html
+++ b/waylist.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Расположение и контакты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="fav.png" /><link rel="apple-touch-icon" sizes="180x180" href="fav.png"><link rel="icon" sizes="192x192" href="fav.png">
+            <link rel="shortcut icon" href="fav.png"/>
     <meta name="keywords" content="Маршруты в Оливер Пицца поблизости">
     <meta name="description" content="Кафе-пиццерия в г.Мурино по адресу: ул. Шувалова 27/7">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,31 +23,32 @@
     </path>
   </svg>
 </div>
-<section class="banner" id="kappe"><a href="index.html"><img src="logojune2022.png"height="50px"></a></section>
-          <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a>
-      <br><br><div id="nav-icon3" class="pushmenu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <nav class="sidebar">
-        <div class="text d-flex p-2">
-        <a><img src="whitelogo.png" width="50"></a>
-          <div id="nav-icon3" class="pushmenu opened">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+</div><table class="GeneralBan"><td class="GeneralBanLogo"><a href="index.html"><img src="logojune2022.png"height="35px"></a></td><td class="GeneralBanMe">&nbsp;<div id="nav-icon3" class="pushmenu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div></td>
+</table>
+
+    <br><br>
+        <nav class="sidebar">
+          <div class="text d-flex p-2">
+            <div id="nav-icon3" class="pushmenu opened">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
-        </div>
-        <div class="menu-main-menu-container">
-          <a id="submenutext" href="index.html" style="text-decoration: none"><br>На главную</a><br>
-          <a id="submenutext" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
-          <a id="submenutext" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
-          <a id="submenutext" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
-        </div>
-      </nav>
-      <div class="hidden-overley"></div>
+          <div class="menu-main-menu-container">
+            <a class="MenuLinksStyle"  href="index.html" style="text-decoration: none"><br>Главная страница</a><br>
+            <a class="MenuLinksStyle" href="foodlist.html" style="text-decoration: none"><br>Кухня</a><br>
+            <a class="SelectedMenuLinksStyle" style="text-decoration: none"><br>Расположение и контакты</a><br>
+            <a class="MenuLinksStyle" href="rejoicing.html" style="text-decoration: none"><br>Организация мероприятий</a><br>
+            <a class="MenuLinksStyle" href="docs.html" style="text-decoration: none"><br>Юридическая информация и работа с Оливер</a>
+          </div>
+        </nav>
+        <div class="hidden-overley"></div><br>
+  <div class="LanguagesSelect"> <img src="lg_1ru.png" width="105"><a href="badpage.html"><img src="lg_2ru.png" width="102.5"></a></div>
       <h1 class="GenIndexText">Расположение и контакты.</h1>
       <div class="asylum"><br><p id="infoVac" style="color: black; text-align: right;">Сделайте заказ по телефону. Закажите столик.</p>
             <p id="OccDeal">ОЛИВЕР #1 Мурино, <a class="BlueLink" href="">позвонить</a>.</p>
